# QSIP

./: CMakeLists.txt  README.md
src/: qsip.cpp  qsip.h  qsipaccount.cpp  qsipaccount.h  qsipbuddy.cpp  qsipbuddy.h  qsipcall.cpp  qsipcall.h  qsiplogwriter.cpp  qsiplogwriter.h
